--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+alga = "0.9.1"
 amethyst = "0.13.0"
+nalgebra = "0.18.1"
+num = "0.2.0"
 
 [features]
 default = ["vulkan"]
