--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
 language: rust
+sudo: required
+
 addons:
   apt:
     packages:
       - libasound2-dev
       - libxcb-shape0-dev
       - libxcb-xfixes0-dev
+        # Codecoverage generating and uploading dependencies
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - cmake
+      - gcc
+      - binutils-dev
+      - libiberty-dev
 rust:
   - stable
   - beta
@@ -12,5 +22,21 @@ rust:
 matrix:
   allow_failures:
     - rust: nightly
-  fast_finish: true
+      # fast_finish: true
 cache: cargo
+
+# Generate coverage and upload it
+after_success: |
+  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+  tar xzf master.tar.gz &&
+  cd kcov-master &&
+  mkdir build &&
+  cd build &&
+  cmake .. &&
+  make &&
+  make install DESTDIR=../../kcov-build &&
+  cd ../.. &&
+  rm -rf kcov-master &&
+  for file in target/debug/*-*; do [ -x "${file}" ] || continue; mkdir -p "target/cov/$(basename $file)"; ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
+  bash <(curl -s https://codecov.io/bash) &&
+  echo "Uploaded code coverage"
