--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ nalgebra = "0.18.1"
 num = "0.2.0"
 rand = "0.7.2"
 shred = "0.9.3"
+serde = "1.0.102"
+serde_json = "1.0.41"
 
 [features]
 default = ["vulkan"]
